--- a/index.html
+++ b/index.html
@@ -13,109 +13,121 @@
   <body>
     <!-- Шапка сайта -->
     <header>
-      <nav>
-        <a class="logo" href="./index.html"
-          ><span class="web">Web</span>Studio</a
-        >
-        <ul>
-          <li><a class="header-link" href="./index.html">Студия</a></li>
-          <li><a class="header-link" href="./portfolio.html">Портфолио</a></li>
-          <li><a class="header-link" href="">Контакты</a></li>
-        </ul>
-      </nav>
-      <address>
-        <a class="header-link" href="mailto:info@devstudio.com"
-          >info@devstudio.com</a
-        >
-        <a class="header-link" href="tel:+380961111111">+38 096 111 11 11</a>
-      </address>
+      <div class="container header">
+        <nav>
+          <a class="logo" href="./index.html"
+            ><span class="web">Web</span>Studio</a
+          >
+          <ul>
+            <li><a class="header-link" href="./index.html">Студия</a></li>
+            <li>
+              <a class="header-link" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li><a class="header-link" href="">Контакты</a></li>
+          </ul>
+        </nav>
+        <address>
+          <a class="header-link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+          <a class="header-link" href="tel:+380961111111">+38 096 111 11 11</a>
+        </address>
+      </div>
     </header>
 
     <!-- Главный контент -->
     <main>
       <!-- Герой -->
       <section class="hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <!-- <a class="button" href="">Заказать услугу</a> -->
-        <button class="button">Заказать услугу</button>
+        <div class="center">
+          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+          <!-- <a class="button" href="">Заказать услугу</a> -->
+          <button class="button">Заказать услугу</button>
+        </div>
       </section>
 
       <!-- Особенности -->
       <section class="features">
         <h2 class="title">Особенности</h2>
-        <ul>
-          <li>
-            <h3 class="features-title">Внимание к деталям</h3>
-            <p class="features-description">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-title">Пунктуальность</h3>
-            <p class="features-description">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-title">Планирование</h3>
-            <p class="features-description">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-title">Современные технологии</h3>
-            <p class="features-description">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <ul>
+            <li>
+              <h3 class="features-title">Внимание к деталям</h3>
+              <p class="features-description">
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
+            <li>
+              <h3 class="features-title">Пунктуальность</h3>
+              <p class="features-description">
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
+            </li>
+            <li>
+              <h3 class="features-title">Планирование</h3>
+              <p class="features-description">
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li>
+              <h3 class="features-title">Современные технологии</h3>
+              <p class="features-description">
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Чем мы занимаемся -->
-      <section>
-        <h2 class="title">Чем мы занимаемся</h2>
-        <ul>
-          <li>
-            <img src="./images/lesson1.jpg" alt="Lessons 1" width="370" />
-          </li>
-          <li>
-            <img src="./images/lesson2.jpg" alt="Lessons 2" width="370" />
-          </li>
-          <li>
-            <img src="./images/lesson3.jpg" alt="Lessons 3" width="370" />
-          </li>
-        </ul>
+      <section class="work">
+        <div class="container">
+          <h2 class="title center">Чем мы занимаемся</h2>
+          <ul>
+            <li>
+              <img src="./images/lesson1.jpg" alt="Lessons 1" width="370" />
+            </li>
+            <li>
+              <img src="./images/lesson2.jpg" alt="Lessons 2" width="370" />
+            </li>
+            <li>
+              <img src="./images/lesson3.jpg" alt="Lessons 3" width="370" />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Наша команда-->
       <section class="team">
-        <h2 class="title">Наша команда</h2>
-        <ul>
-          <li>
-            <img src="./images/colleague1.jpg" alt="colleague1" width="270" />
-            <h3 class="team-name">Игорь Демьяненко</h3>
-            <p class="team-position">Product Designer</p>
-          </li>
-          <li>
-            <img src="./images/colleague2.jpg" alt="colleague2" width="270" />
-            <h3 class="team-name">Ольга Репина</h3>
-            <p class="team-position">Frontend Developer</p>
-          </li>
-          <li>
-            <img src="./images/colleague3.jpg" alt="colleague3" width="270" />
-            <h3 class="team-name">Николай Тарасов</h3>
-            <p class="team-position">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/colleague4.jpg" alt="colleague4" width="270" />
-            <h3 class="team-name">Михаил Ермаков</h3>
-            <p class="team-position">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="title center">Наша команда</h2>
+          <ul>
+            <li>
+              <img src="./images/colleague1.jpg" alt="colleague1" width="270" />
+              <h3 class="team-name">Игорь Демьяненко</h3>
+              <p class="team-position">Product Designer</p>
+            </li>
+            <li>
+              <img src="./images/colleague2.jpg" alt="colleague2" width="270" />
+              <h3 class="team-name">Ольга Репина</h3>
+              <p class="team-position">Frontend Developer</p>
+            </li>
+            <li>
+              <img src="./images/colleague3.jpg" alt="colleague3" width="270" />
+              <h3 class="team-name">Николай Тарасов</h3>
+              <p class="team-position">Marketing</p>
+            </li>
+            <li>
+              <img src="./images/colleague4.jpg" alt="colleague4" width="270" />
+              <h3 class="team-name">Михаил Ермаков</h3>
+              <p class="team-position">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
