--- a/index.html
+++ b/index.html
@@ -107,25 +107,64 @@
           <h2 class="title center">Наша команда</h2>
           <ul>
             <li>
-              <img src="./images/colleague1.jpg" alt="colleague1" width="270" />
+              <img class="img" src="./images/colleague1.jpg" alt="colleague1" width="270" />
               <h3 class="team-name">Игорь Демьяненко</h3>
               <p class="team-position">Product Designer</p>
+              <ul class="team-social">
+                <li><a href="//www.instagram.com/"><img src="" alt="instagram"></a></li>
+                <li><a href="//twitter.com/"><img src="" alt="twitter"></a></li>
+                <li><a href="//www.facebook.com/"><img src="" alt="facebook"></a></li>
+                <li><a href="//www.linkedin.com/"><img src="" alt="linkedin"></a></li>
+              </ul>
             </li>
             <li>
-              <img src="./images/colleague2.jpg" alt="colleague2" width="270" />
+              <img class="img" src="./images/colleague2.jpg" alt="colleague2" width="270" />
               <h3 class="team-name">Ольга Репина</h3>
               <p class="team-position">Frontend Developer</p>
+              <ul class="team-social">
+                <li><a href="//www.instagram.com/"><img src="" alt="instagram"></a></li>
+                <li><a href="//twitter.com/"><img src="" alt="twitter"></a></li>
+                <li><a href="//www.facebook.com/"><img src="" alt="facebook"></a></li>
+                <li><a href="//www.linkedin.com/"><img src="" alt="linkedin"></a></li>
+              </ul>
             </li>
             <li>
-              <img src="./images/colleague3.jpg" alt="colleague3" width="270" />
+              <img class="img" src="./images/colleague3.jpg" alt="colleague3" width="270" />
               <h3 class="team-name">Николай Тарасов</h3>
               <p class="team-position">Marketing</p>
+              <ul class="team-social">
+                <li><a href="//www.instagram.com/"><img src="" alt="instagram"></a></li>
+                <li><a href="//twitter.com/"><img src="" alt="twitter"></a></li>
+                <li><a href="//www.facebook.com/"><img src="" alt="facebook"></a></li>
+                <li><a href="//www.linkedin.com/"><img src="" alt="linkedin"></a></li>
+              </ul>
             </li>
             <li>
-              <img src="./images/colleague4.jpg" alt="colleague4" width="270" />
+              <img class="img" src="./images/colleague4.jpg" alt="colleague4" width="270" />
               <h3 class="team-name">Михаил Ермаков</h3>
               <p class="team-position">UI Designer</p>
+              <ul class="team-social">
+                <li><a href="//www.instagram.com/"><img src="" alt="instagram"></a></li>
+                <li><a href="//twitter.com/"><img src="" alt="twitter"></a></li>
+                <li><a href="//www.facebook.com/"><img src="" alt="facebook"></a></li>
+                <li><a href="//www.linkedin.com/"><img src="" alt="linkedin"></a></li>
+              </ul>
             </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- Постоянные клиенты -->
+      <section class="clients">
+        <div class="container">
+          <h2 class="title center">Постоянные клиенты</h2>
+          <ul>
+            <li><a href=""><img src="" alt="two"></a></li>
+            <li><a href=""><img src="" alt="three"></a></li>
+            <li><a href=""><img src="" alt="four"></a></li>
+            <li><a href=""><img src="" alt="one"></a></li>
+            <li><a href=""><img src="" alt="five"></a></li>
+            <li><a href=""><img src="" alt="six"></a></li>
           </ul>
         </div>
       </section>
@@ -146,6 +185,13 @@
           ><br />
           <a class="address-link" href="tel:+380991111111">+38 099 111 11 11</a>
         </address>
+        <p>Присоединяйтесь</p>
+        <ul>
+          <li><a href="//www.instagram.com/"><img src="" alt="instagram"></a></li>
+          <li><a href="//twitter.com/"><img src="" alt="twitter"></a></li>
+          <li><a href="//www.facebook.com/"><img src="" alt="facebook"></a></li>
+          <li><a href="//www.linkedin.com/"><img src="" alt="linkedin"></a></li>
+        </ul>
       </section>
     </footer>
   </body>
