Добавляет клас и стиль в футер

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
       <!-- Особенности -->
       <section class="features">
-        <h2 class="title">Особенности</h2>
+        <h2 class="visually-hidden">Особенности</h2>
         <div class="container">
           <ul>
             <li>
@@ -173,7 +173,7 @@
     <!-- Футер -->
     <footer>
       <section class="footer">
-        <h2>Контакты</h2>
+        <h2 class="visually-hidden">Контакты</h2>
         <a class="logo" href="./index.html"
           ><span class="web">Web</span><span class="studio">Studio</span></a
         >
@@ -185,7 +185,7 @@
           ><br />
           <a class="address-link" href="tel:+380991111111">+38 099 111 11 11</a>
         </address>
-        <p>Присоединяйтесь</p>
+        <p class="footer-social">Присоединяйтесь</p>
         <ul>
           <li><a href="//www.instagram.com/"><img src="" alt="instagram"></a></li>
           <li><a href="//twitter.com/"><img src="" alt="twitter"></a></li>
