Добавляет лого социальных сетей

--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
       <!-- Герой -->
       <section class="hero">
         <div class="center">
-          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+          <h1 class="hero-title">
+            Эффективные решения<br />
+            для вашего бизнеса
+          </h1>
           <!-- <a class="button" href="">Заказать услугу</a> -->
           <button class="button">Заказать услугу</button>
         </div>
@@ -51,28 +54,28 @@
         <h2 class="visually-hidden">Особенности</h2>
         <div class="container">
           <ul>
-            <li>
+            <li class="features-item">
               <h3 class="features-title">Внимание к деталям</h3>
               <p class="features-description">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li>
+            <li class="features-item">
               <h3 class="features-title">Пунктуальность</h3>
               <p class="features-description">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li>
+            <li class="features-item">
               <h3 class="features-title">Планирование</h3>
               <p class="features-description">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li>
+            <li class="features-item">
               <h3 class="features-title">Современные технологии</h3>
               <p class="features-description">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -103,51 +106,135 @@
 
       <!-- Наша команда-->
       <section class="team">
-        <div class="container">
+        <div class="container social">
           <h2 class="title center">Наша команда</h2>
           <ul>
             <li>
-              <img class="img" src="./images/colleague1.jpg" alt="colleague1" width="270" />
+              <img
+                class="img"
+                src="./images/colleague1.jpg"
+                alt="colleague1"
+                width="270"
+              />
               <h3 class="team-name">Игорь Демьяненко</h3>
               <p class="team-position">Product Designer</p>
               <ul class="team-social">
-                <li><a href="//www.instagram.com/"><img src="" alt="instagram"></a></li>
-                <li><a href="//twitter.com/"><img src="" alt="twitter"></a></li>
-                <li><a href="//www.facebook.com/"><img src="" alt="facebook"></a></li>
-                <li><a href="//www.linkedin.com/"><img src="" alt="linkedin"></a></li>
+                <li>
+                  <a href="//www.instagram.com/"
+                    ><img src="./images/social/instagram.png" alt="instagram"
+                  /></a>
+                </li>
+                <li>
+                  <a href="//twitter.com/"
+                    ><img src="./images/social/twitter.png" alt="twitter"
+                  /></a>
+                </li>
+                <li>
+                  <a href="//www.facebook.com/"
+                    ><img src="./images/social/facebook.png" alt="facebook"
+                  /></a>
+                </li>
+                <li>
+                  <a href="//www.linkedin.com/"
+                    ><img src="./images/social/linkedin.png" alt="linkedin"
+                  /></a>
+                </li>
               </ul>
             </li>
             <li>
-              <img class="img" src="./images/colleague2.jpg" alt="colleague2" width="270" />
+              <img
+                class="img"
+                src="./images/colleague2.jpg"
+                alt="colleague2"
+                width="270"
+              />
               <h3 class="team-name">Ольга Репина</h3>
               <p class="team-position">Frontend Developer</p>
               <ul class="team-social">
-                <li><a href="//www.instagram.com/"><img src="" alt="instagram"></a></li>
-                <li><a href="//twitter.com/"><img src="" alt="twitter"></a></li>
-                <li><a href="//www.facebook.com/"><img src="" alt="facebook"></a></li>
-                <li><a href="//www.linkedin.com/"><img src="" alt="linkedin"></a></li>
+                <li>
+                  <a href="//www.instagram.com/"
+                    ><img src="./images/social/instagram.png" alt="instagram"
+                  /></a>
+                </li>
+                <li>
+                  <a href="//twitter.com/"
+                    ><img src="./images/social/twitter.png" alt="twitter"
+                  /></a>
+                </li>
+                <li>
+                  <a href="//www.facebook.com/"
+                    ><img src="./images/social/facebook.png" alt="facebook"
+                  /></a>
+                </li>
+                <li>
+                  <a href="//www.linkedin.com/"
+                    ><img src="./images/social/linkedin.png" alt="linkedin"
+                  /></a>
+                </li>
               </ul>
             </li>
             <li>
-              <img class="img" src="./images/colleague3.jpg" alt="colleague3" width="270" />
+              <img
+                class="img"
+                src="./images/colleague3.jpg"
+                alt="colleague3"
+                width="270"
+              />
               <h3 class="team-name">Николай Тарасов</h3>
               <p class="team-position">Marketing</p>
               <ul class="team-social">
-                <li><a href="//www.instagram.com/"><img src="" alt="instagram"></a></li>
-                <li><a href="//twitter.com/"><img src="" alt="twitter"></a></li>
-                <li><a href="//www.facebook.com/"><img src="" alt="facebook"></a></li>
-                <li><a href="//www.linkedin.com/"><img src="" alt="linkedin"></a></li>
+                <li>
+                  <a href="//www.instagram.com/"
+                    ><img src="./images/social/instagram.png" alt="instagram"
+                  /></a>
+                </li>
+                <li>
+                  <a href="//twitter.com/"
+                    ><img src="./images/social/twitter.png" alt="twitter"
+                  /></a>
+                </li>
+                <li>
+                  <a href="//www.facebook.com/"
+                    ><img src="./images/social/facebook.png" alt="facebook"
+                  /></a>
+                </li>
+                <li>
+                  <a href="//www.linkedin.com/"
+                    ><img src="./images/social/linkedin.png" alt="linkedin"
+                  /></a>
+                </li>
               </ul>
             </li>
             <li>
-              <img class="img" src="./images/colleague4.jpg" alt="colleague4" width="270" />
+              <img
+                class="img"
+                src="./images/colleague4.jpg"
+                alt="colleague4"
+                width="270"
+              />
               <h3 class="team-name">Михаил Ермаков</h3>
               <p class="team-position">UI Designer</p>
               <ul class="team-social">
-                <li><a href="//www.instagram.com/"><img src="" alt="instagram"></a></li>
-                <li><a href="//twitter.com/"><img src="" alt="twitter"></a></li>
-                <li><a href="//www.facebook.com/"><img src="" alt="facebook"></a></li>
-                <li><a href="//www.linkedin.com/"><img src="" alt="linkedin"></a></li>
+                <li>
+                  <a href="//www.instagram.com/"
+                    ><img src="./images/social/instagram.png" alt="instagram"
+                  /></a>
+                </li>
+                <li>
+                  <a href="//twitter.com/"
+                    ><img src="./images/social/twitter.png" alt="twitter"
+                  /></a>
+                </li>
+                <li>
+                  <a href="//www.facebook.com/"
+                    ><img src="./images/social/facebook.png" alt="facebook"
+                  /></a>
+                </li>
+                <li>
+                  <a href="//www.linkedin.com/"
+                    ><img src="./images/social/linkedin.png" alt="linkedin"
+                  /></a>
+                </li>
               </ul>
             </li>
           </ul>
@@ -159,12 +246,36 @@
         <div class="container">
           <h2 class="title center">Постоянные клиенты</h2>
           <ul>
-            <li><a href=""><img src="" alt="two"></a></li>
-            <li><a href=""><img src="" alt="three"></a></li>
-            <li><a href=""><img src="" alt="four"></a></li>
-            <li><a href=""><img src="" alt="one"></a></li>
-            <li><a href=""><img src="" alt="five"></a></li>
-            <li><a href=""><img src="" alt="six"></a></li>
+            <li>
+              <a class="social-button" href="#"
+                ><img src="./images/logo-clients/logo-1.png" alt="one"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="./images/logo-clients/logo-2.png" alt="two"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="./images/logo-clients/logo-3.png" alt="three"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="./images/logo-clients/logo-4.png" alt="four"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="./images/logo-clients/logo-5.png" alt="five"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="./images/logo-clients/logo-6.png" alt="six"
+              /></a>
+            </li>
           </ul>
         </div>
       </section>
@@ -187,10 +298,26 @@
         </address>
         <p class="footer-social">Присоединяйтесь</p>
         <ul>
-          <li><a href="//www.instagram.com/"><img src="" alt="instagram"></a></li>
-          <li><a href="//twitter.com/"><img src="" alt="twitter"></a></li>
-          <li><a href="//www.facebook.com/"><img src="" alt="facebook"></a></li>
-          <li><a href="//www.linkedin.com/"><img src="" alt="linkedin"></a></li>
+          <li>
+            <a href="//www.instagram.com/"
+              ><img src="./images/social/instagram.png" alt="instagram"
+            /></a>
+          </li>
+          <li>
+            <a href="//twitter.com/"
+              ><img src="./images/social/twitter.png" alt="twitter"
+            /></a>
+          </li>
+          <li>
+            <a href="//www.facebook.com/"
+              ><img src="./images/social/facebook.png" alt="facebook"
+            /></a>
+          </li>
+          <li>
+            <a href="//www.linkedin.com/"
+              ><img src="./images/social/linkedin.png" alt="linkedin"
+            /></a>
+          </li>
         </ul>
       </section>
     </footer>
