--- a/portfolio.html
+++ b/portfolio.html
@@ -13,29 +13,33 @@
   <body>
     <!-- Шапка сайта -->
     <header>
-      <nav>
-        <a class="logo" href="./index.html"
-          ><span class="web">Web</span>Studio</a
-        >
-        <ul>
-          <li><a class="header-link" href="./index.html">Студия</a></li>
-          <li><a class="header-link" href="./portfolio.html">Портфолио</a></li>
-          <li><a class="header-link" href="">Контакты</a></li>
-        </ul>
-      </nav>
-      <address>
-        <a class="header-link" href="mailto:info@devstudio.com"
-          >info@devstudio.com</a
-        >
-        <a class="header-link" href="tel:+380961111111">+38 096 111 11 11</a>
-      </address>
+      <div class="container header horizont">
+        <nav class="navigate horizont">
+          <a class="logo" href="./index.html"
+            ><span class="web">Web</span>Studio</a
+          >
+          <ul class="header-list">
+            <li><a class="header-link" href="./index.html">Студия</a></li>
+            <li>
+              <a class="header-link" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li><a class="header-link" href="">Контакты</a></li>
+          </ul>
+        </nav>
+        <address class="adress-horizont">
+          <a class="header-link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+          <a class="header-link" href="tel:+380961111111">+38 096 111 11 11</a>
+        </address>
+      </div>
     </header>
 
     <!-- Главный контент -->
     <main>
-      <section>
-        <h1>Портфолио</h1>
-        <ul class="filter">
+      <section class="container">
+        <h1 class="visually-hidden">Портфолио</h1>
+        <ul class="filter header-list">
           <li>
             <button type="button" class="button-filter">Веб-сайты</button>
           </li>
@@ -48,7 +52,7 @@
           </li>
           <li><button type="button" class="button-filter">Все</button></li>
         </ul>
-        <ul>
+        <ul class="portfolio">
           <li>
             <a href="">
               <img
@@ -154,19 +158,43 @@
 
     <!-- Футер -->
     <footer>
-      <section class="footer">
-        <h2>Контакты</h2>
-        <a class="logo" href="./index.html"
-          ><span class="web">Web</span><span class="studio">Studio</span></a
-        >
-
+      <section class="container footer horizont">
         <address class="address">
+          <h2 class="visually-hidden">Контакты</h2>
+          <a class="logo" href="./index.html"
+            ><span class="web">Web</span><span class="studio">Studio</span></a
+          ><br />
           г. Киев, пр-т Леси Украинки, 26<br />
           <a class="address-link" href="mailto:info@example.com"
             >info@example.com</a
           ><br />
           <a class="address-link" href="tel:+380991111111">+38 099 111 11 11</a>
         </address>
+        <div class="welcome">
+          <p class="footer-title">Присоединяйтесь</p>
+          <ul class="footer-social">
+            <li>
+              <a href="//www.instagram.com/"
+                ><img src="./images/social/instagram.png" alt="instagram"
+              /></a>
+            </li>
+            <li>
+              <a href="//twitter.com/"
+                ><img src="./images/social/twitter.png" alt="twitter"
+              /></a>
+            </li>
+            <li>
+              <a href="//www.facebook.com/"
+                ><img src="./images/social/facebook.png" alt="facebook"
+              /></a>
+            </li>
+            <li>
+              <a href="//www.linkedin.com/"
+                ><img src="./images/social/linkedin.png" alt="linkedin"
+              /></a>
+            </li>
+          </ul>
+        </div>
       </section>
     </footer>
   </body>
