Исправляет ошибки в Studio и Portfolio

--- a/index.html
+++ b/index.html
@@ -118,28 +118,6 @@
               />
               <h3 class="team-name">Игорь Демьяненко</h3>
               <p class="team-position">Product Designer</p>
-              <ul class="team-social">
-                <li>
-                  <a href="//www.instagram.com/"
-                    ><img src="./images/social/instagram.png" alt="instagram"
-                  /></a>
-                </li>
-                <li>
-                  <a href="//twitter.com/"
-                    ><img src="./images/social/twitter.png" alt="twitter"
-                  /></a>
-                </li>
-                <li>
-                  <a href="//www.facebook.com/"
-                    ><img src="./images/social/facebook.png" alt="facebook"
-                  /></a>
-                </li>
-                <li>
-                  <a href="//www.linkedin.com/"
-                    ><img src="./images/social/linkedin.png" alt="linkedin"
-                  /></a>
-                </li>
-              </ul>
             </li>
             <li>
               <img
@@ -150,28 +128,6 @@
               />
               <h3 class="team-name">Ольга Репина</h3>
               <p class="team-position">Frontend Developer</p>
-              <ul class="team-social">
-                <li>
-                  <a href="//www.instagram.com/"
-                    ><img src="./images/social/instagram.png" alt="instagram"
-                  /></a>
-                </li>
-                <li>
-                  <a href="//twitter.com/"
-                    ><img src="./images/social/twitter.png" alt="twitter"
-                  /></a>
-                </li>
-                <li>
-                  <a href="//www.facebook.com/"
-                    ><img src="./images/social/facebook.png" alt="facebook"
-                  /></a>
-                </li>
-                <li>
-                  <a href="//www.linkedin.com/"
-                    ><img src="./images/social/linkedin.png" alt="linkedin"
-                  /></a>
-                </li>
-              </ul>
             </li>
             <li>
               <img
@@ -182,28 +138,6 @@
               />
               <h3 class="team-name">Николай Тарасов</h3>
               <p class="team-position">Marketing</p>
-              <ul class="team-social">
-                <li>
-                  <a href="//www.instagram.com/"
-                    ><img src="./images/social/instagram.png" alt="instagram"
-                  /></a>
-                </li>
-                <li>
-                  <a href="//twitter.com/"
-                    ><img src="./images/social/twitter.png" alt="twitter"
-                  /></a>
-                </li>
-                <li>
-                  <a href="//www.facebook.com/"
-                    ><img src="./images/social/facebook.png" alt="facebook"
-                  /></a>
-                </li>
-                <li>
-                  <a href="//www.linkedin.com/"
-                    ><img src="./images/social/linkedin.png" alt="linkedin"
-                  /></a>
-                </li>
-              </ul>
             </li>
             <li>
               <img
@@ -214,67 +148,6 @@
               />
               <h3 class="team-name">Михаил Ермаков</h3>
               <p class="team-position">UI Designer</p>
-              <ul class="team-social">
-                <li>
-                  <a href="//www.instagram.com/"
-                    ><img src="./images/social/instagram.png" alt="instagram"
-                  /></a>
-                </li>
-                <li>
-                  <a href="//twitter.com/"
-                    ><img src="./images/social/twitter.png" alt="twitter"
-                  /></a>
-                </li>
-                <li>
-                  <a href="//www.facebook.com/"
-                    ><img src="./images/social/facebook.png" alt="facebook"
-                  /></a>
-                </li>
-                <li>
-                  <a href="//www.linkedin.com/"
-                    ><img src="./images/social/linkedin.png" alt="linkedin"
-                  /></a>
-                </li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-      </section>
-
-      <!-- Постоянные клиенты -->
-      <section class="clients">
-        <div class="container">
-          <h2 class="title center">Постоянные клиенты</h2>
-          <ul class="horizont">
-            <li>
-              <a class="social-button" href="#"
-                ><img src="./images/logo-clients/logo-1.png" alt="one"
-              /></a>
-            </li>
-            <li>
-              <a href="#"
-                ><img src="./images/logo-clients/logo-2.png" alt="two"
-              /></a>
-            </li>
-            <li>
-              <a href="#"
-                ><img src="./images/logo-clients/logo-3.png" alt="three"
-              /></a>
-            </li>
-            <li>
-              <a href="#"
-                ><img src="./images/logo-clients/logo-4.png" alt="four"
-              /></a>
-            </li>
-            <li>
-              <a href="#"
-                ><img src="./images/logo-clients/logo-5.png" alt="five"
-              /></a>
-            </li>
-            <li>
-              <a href="#"
-                ><img src="./images/logo-clients/logo-6.png" alt="six"
-              /></a>
             </li>
           </ul>
         </div>
@@ -282,45 +155,17 @@
     </main>
 
     <!-- Футер -->
-    <footer>
-      <section class="container footer horizont">
-        <address class="address">
-          <h2 class="visually-hidden">Контакты</h2>
-          <a class="logo" href="./index.html"
-            ><span class="web">Web</span><span class="studio">Studio</span></a
-          ><br />
-          г. Киев, пр-т Леси Украинки, 26<br />
-          <a class="address-link" href="mailto:info@example.com"
+    <footer>      
+      <div class="container">
+        <a class="logo footer-logo" href="./index.html"><span class="web">Web</span><span class="studio">Studio</span></a>
+        <h2 class="visually-hidden">Контакты</h2>
+        <address class="address">г. Киев, пр-т Леси Украинки, 26<br />
+          <a class="address-link mail-footer" href="mailto:info@example.com"
             >info@example.com</a
           ><br />
           <a class="address-link" href="tel:+380991111111">+38 099 111 11 11</a>
         </address>
-        <div class="welcome">
-          <p class="footer-title">Присоединяйтесь</p>
-          <ul class="footer-social">
-            <li>
-              <a href="//www.instagram.com/"
-                ><img src="./images/social/instagram.png" alt="instagram"
-              /></a>
-            </li>
-            <li>
-              <a href="//twitter.com/"
-                ><img src="./images/social/twitter.png" alt="twitter"
-              /></a>
-            </li>
-            <li>
-              <a href="//www.facebook.com/"
-                ><img src="./images/social/facebook.png" alt="facebook"
-              /></a>
-            </li>
-            <li>
-              <a href="//www.linkedin.com/"
-                ><img src="./images/social/linkedin.png" alt="linkedin"
-              /></a>
-            </li>
-          </ul>
-        </div>
-      </section>
+      </div>
     </footer>
   </body>
 </html>
