--- a/portfolio.html
+++ b/portfolio.html
@@ -34,168 +34,139 @@
         </address>
       </div>
     </header>
+    <div class="heder-line">
+    </div>
 
     <!-- Главный контент -->
     <main>
-      <section class="container">
-        <h1 class="visually-hidden">Портфолио</h1>
-        <ul class="filter header-list">
-          <li>
-            <button type="button" class="button-filter">Веб-сайты</button>
-          </li>
-          <li>
-            <button type="button" class="button-filter">Приложения</button>
-          </li>
-          <li><button type="button" class="button-filter">Дизайн</button></li>
-          <li>
-            <button type="button" class="button-filter">Маркетинг</button>
-          </li>
-          <li><button type="button" class="button-filter">Все</button></li>
-        </ul>
-        <ul class="portfolio">
-          <li>
-            <a href="">
-              <img
-                src="./images-portfolio/portfolio1.jpg"
-                alt="Portfolio1"
-                width="370"
-              />
-              <h2 class="projects-title">Технокряк</h2>
-              <p class="projects-kind">Веб-сайт</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images-portfolio/portfolio2.jpg"
-                alt="Portfolio2"
-                width="370"
-              />
-              <h2 class="projects-title">Постер New Orlean vs Golden Star</h2>
-              <p class="projects-kind">Дизайн</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images-portfolio/portfolio3.jpg"
-                alt="Portfolio3"
-                width="370"
-              />
-              <h2 class="projects-title">Ресторан Seafood</h2>
-              <p class="projects-kind">Приложение</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images-portfolio/portfolio4.jpg"
-                alt="Portfolio4"
-                width="370"
-              />
-              <h2 class="projects-title">Проект Prime</h2>
-              <p class="projects-kind">Маркетинг</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images-portfolio/portfolio5.jpg"
-                alt="Portfolio5"
-                width="370"
-              />
-              <h2 class="projects-title">Проект Boxes</h2>
-              <p class="projects-kind">Приложение</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images-portfolio/portfolio6.jpg"
-                alt="Portfolio6"
-                width="370"
-              />
-              <h2 class="projects-title">Inspiration has no Borders</h2>
-              <p class="projects-kind">Веб-сайт</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images-portfolio/portfolio7.jpg"
-                alt="Portfolio7"
-                width="370"
-              />
-              <h2 class="projects-title">Издание Limited Edition</h2>
-              <p class="projects-kind">Дизайн</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images-portfolio/portfolio8.jpg"
-                alt="Portfolio8"
-                width="370"
-              />
-              <h2 class="projects-title">Проект LAB</h2>
-              <p class="projects-kind">Маркетинг</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images-portfolio/portfolio9.jpg"
-                alt="Portfolio9"
-                width="370"
-              />
-              <h2 class="projects-title">Growing Business</h2>
-              <p class="projects-kind">Приложение</p>
-            </a>
-          </li>
-        </ul>
-      </section>
-    </main>
-
-    <!-- Футер -->
-    <footer>
-      <section class="container footer horizont">
-        <address class="address">
-          <h2 class="visually-hidden">Контакты</h2>
-          <a class="logo" href="./index.html"
-            ><span class="web">Web</span><span class="studio">Studio</span></a
-          ><br />
-          г. Киев, пр-т Леси Украинки, 26<br />
-          <a class="address-link" href="mailto:info@example.com"
-            >info@example.com</a
-          ><br />
-          <a class="address-link" href="tel:+380991111111">+38 099 111 11 11</a>
-        </address>
-        <div class="welcome">
-          <p class="footer-title">Присоединяйтесь</p>
-          <ul class="footer-social">
-            <li>
-              <a href="//www.instagram.com/"
-                ><img src="./images/social/instagram.png" alt="instagram"
-              /></a>
+      <section>
+        <div class="portfolio-container">
+          <h1 class="visually-hidden">Портфолио</h1>
+          <ul class="filter">
+            <li class="filter-item"><button type="button" class="button-filter">Все</button></li>
+            <li class="filter-item"><button type="button" class="button-filter">Веб-сайты</button></li>
+            <li class="filter-item"><button type="button" class="button-filter">Приложения</button></li>
+            <li class="filter-item"><button type="button" class="button-filter">Дизайн</button></li>
+            <li class="filter-item"><button type="button" class="button-filter">Маркетинг</button></li>
+            <li><button type="button" class="button-filter">Все</button></li>
+          </ul>
+          <ul class="portfolio">
+            <li class="portfolio-item portfolio-bottom">
+              <a href="">
+                <img
+                  src="./images-portfolio/portfolio1.jpg"
+                  alt="Portfolio1"
+                  width="370"
+                />
+                <h2 class="projects-title">Технокряк</h2>
+                <p class="projects-kind">Веб-сайт</p>
+              </a>
             </li>
-            <li>
-              <a href="//twitter.com/"
-                ><img src="./images/social/twitter.png" alt="twitter"
-              /></a>
+            <li class="portfolio-item portfolio-bottom">
+              <a href="">
+                <img
+                  src="./images-portfolio/portfolio2.jpg"
+                  alt="Portfolio2"
+                  width="370"
+                />
+                <h2 class="projects-title">Постер New Orlean vs Golden Star</h2>
+                <p class="projects-kind">Дизайн</p>
+              </a>
             </li>
-            <li>
-              <a href="//www.facebook.com/"
-                ><img src="./images/social/facebook.png" alt="facebook"
-              /></a>
+            <li class="portfolio-item portfolio-bottom">
+              <a href="">
+                <img
+                  src="./images-portfolio/portfolio3.jpg"
+                  alt="Portfolio3"
+                  width="370"
+                />
+                <h2 class="projects-title">Ресторан Seafood</h2>
+                <p class="projects-kind">Приложение</p>
+              </a>
             </li>
-            <li>
-              <a href="//www.linkedin.com/"
-                ><img src="./images/social/linkedin.png" alt="linkedin"
-              /></a>
+            <li class="portfolio-item portfolio-bottom">
+              <a href="">
+                <img
+                  src="./images-portfolio/portfolio4.jpg"
+                  alt="Portfolio4"
+                  width="370"
+                />
+                <h2 class="projects-title">Проект Prime</h2>
+                <p class="projects-kind">Маркетинг</p>
+              </a>
+            </li>
+            <li class="portfolio-item portfolio-bottom">
+              <a href="">
+                <img
+                  src="./images-portfolio/portfolio5.jpg"
+                  alt="Portfolio5"
+                  width="370"
+                />
+                <h2 class="projects-title">Проект Boxes</h2>
+                <p class="projects-kind">Приложение</p>
+              </a>
+            </li>
+            <li class="portfolio-item portfolio-bottom">
+              <a href="">
+                <img
+                  src="./images-portfolio/portfolio6.jpg"
+                  alt="Portfolio6"
+                  width="370"
+                />
+                <h2 class="projects-title">Inspiration has no Borders</h2>
+                <p class="projects-kind">Веб-сайт</p>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="">
+                <img
+                  src="./images-portfolio/portfolio7.jpg"
+                  alt="Portfolio7"
+                  width="370"
+                />
+                <h2 class="projects-title">Издание Limited Edition</h2>
+                <p class="projects-kind">Дизайн</p>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="">
+                <img
+                  src="./images-portfolio/portfolio8.jpg"
+                  alt="Portfolio8"
+                  width="370"
+                />
+                <h2 class="projects-title">Проект LAB</h2>
+                <p class="projects-kind">Маркетинг</p>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="">
+                <img
+                  src="./images-portfolio/portfolio9.jpg"
+                  alt="Portfolio9"
+                  width="370"
+                />
+                <h2 class="projects-title">Growing Business</h2>
+                <p class="projects-kind">Приложение</p>
+              </a>
             </li>
           </ul>
         </div>
       </section>
+    </main>
+
+    <!-- Футер в portfolio -->
+    <footer>      
+      <div class="container">
+        <a class="logo footer-logo" href="./index.html"><span class="web">Web</span><span class="studio">Studio</span></a>
+        <h2 class="visually-hidden">Контакты</h2>
+        <address class="address">г. Киев, пр-т Леси Украинки, 26<br />
+          <a class="address-link mail-footer" href="mailto:info@example.com"
+            >info@example.com</a
+          ><br />
+          <a class="address-link" href="tel:+380991111111">+38 099 111 11 11</a>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
