--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <!-- Шапка сайта -->
     <header>
-      <div class="container header horizont">
+      <div class="container horizont">
         <nav class="navigate horizont">
           <a class="logo" href="./index.html"
             ><span class="web">Web</span>Studio</a
@@ -26,7 +26,7 @@
             <li><a class="header-link" href="">Контакты</a></li>
           </ul>
         </nav>
-        <address class="adress-horizont">
+        <address class="navigate horizont">
           <a class="header-link" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
@@ -109,7 +109,7 @@
         <div class="container social">
           <h2 class="title center">Наша команда</h2>
           <ul class="horizont">
-            <li>
+            <li class="team-item">
               <img
                 class="img"
                 src="./images/colleague1.jpg"
@@ -119,7 +119,7 @@
               <h3 class="team-name">Игорь Демьяненко</h3>
               <p class="team-position">Product Designer</p>
             </li>
-            <li>
+            <li class="team-item">
               <img
                 class="img"
                 src="./images/colleague2.jpg"
@@ -129,7 +129,7 @@
               <h3 class="team-name">Ольга Репина</h3>
               <p class="team-position">Frontend Developer</p>
             </li>
-            <li>
+            <li class="team-item">
               <img
                 class="img"
                 src="./images/colleague3.jpg"
@@ -139,7 +139,7 @@
               <h3 class="team-name">Николай Тарасов</h3>
               <p class="team-position">Marketing</p>
             </li>
-            <li>
+            <li class="team-item">
               <img
                 class="img"
                 src="./images/colleague4.jpg"
@@ -155,11 +155,14 @@
     </main>
 
     <!-- Футер -->
-    <footer>      
+    <footer>
       <div class="container">
-        <a class="logo footer-logo" href="./index.html"><span class="web">Web</span><span class="studio">Studio</span></a>
+        <a class="logo footer-logo" href="./index.html"
+          ><span class="web">Web</span><span class="studio">Studio</span></a
+        >
         <h2 class="visually-hidden">Контакты</h2>
-        <address class="address">г. Киев, пр-т Леси Украинки, 26<br />
+        <address class="address">
+          г. Киев, пр-т Леси Украинки, 26<br />
           <a class="address-link mail-footer" href="mailto:info@example.com"
             >info@example.com</a
           ><br />
