--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
   <body>
     <!-- Шапка сайта -->
     <header>
-      <div class="container header horizont">
+      <div class="container horizont">
         <nav class="navigate horizont">
           <a class="logo" href="./index.html"
             ><span class="web">Web</span>Studio</a
@@ -26,7 +26,7 @@
             <li><a class="header-link" href="">Контакты</a></li>
           </ul>
         </nav>
-        <address class="adress-horizont">
+        <address class="navigate horizont">
           <a class="header-link" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
@@ -34,8 +34,7 @@
         </address>
       </div>
     </header>
-    <div class="heder-line">
-    </div>
+    <div class="heder-line"></div>
 
     <!-- Главный контент -->
     <main>
@@ -43,11 +42,21 @@
         <div class="portfolio-container">
           <h1 class="visually-hidden">Портфолио</h1>
           <ul class="filter">
-            <li class="filter-item"><button type="button" class="button-filter">Все</button></li>
-            <li class="filter-item"><button type="button" class="button-filter">Веб-сайты</button></li>
-            <li class="filter-item"><button type="button" class="button-filter">Приложения</button></li>
-            <li class="filter-item"><button type="button" class="button-filter">Дизайн</button></li>
-            <li class="filter-item"><button type="button" class="button-filter">Маркетинг</button></li>
+            <li class="filter-item">
+              <button type="button" class="button-filter">Все</button>
+            </li>
+            <li class="filter-item">
+              <button type="button" class="button-filter">Веб-сайты</button>
+            </li>
+            <li class="filter-item">
+              <button type="button" class="button-filter">Приложения</button>
+            </li>
+            <li class="filter-item">
+              <button type="button" class="button-filter">Дизайн</button>
+            </li>
+            <li class="filter-item">
+              <button type="button" class="button-filter">Маркетинг</button>
+            </li>
             <li><button type="button" class="button-filter">Все</button></li>
           </ul>
           <ul class="portfolio">
@@ -156,11 +165,14 @@
     </main>
 
     <!-- Футер в portfolio -->
-    <footer>      
+    <footer>
       <div class="container">
-        <a class="logo footer-logo" href="./index.html"><span class="web">Web</span><span class="studio">Studio</span></a>
+        <a class="logo footer-logo" href="./index.html"
+          ><span class="web">Web</span><span class="studio">Studio</span></a
+        >
         <h2 class="visually-hidden">Контакты</h2>
-        <address class="address">г. Киев, пр-т Леси Украинки, 26<br />
+        <address class="address">
+          г. Киев, пр-т Леси Украинки, 26<br />
           <a class="address-link mail-footer" href="mailto:info@example.com"
             >info@example.com</a
           ><br />
