--- a/index.html
+++ b/index.html
@@ -50,40 +50,38 @@
       </section>
 
       <!-- Особенности -->
-      <section class="features">
+      <section class="container features">
         <h2 class="visually-hidden">Особенности</h2>
-        <div>
-          <ul class="container horizont">
-            <li class="features-item">
-              <h3 class="features-title">Внимание к деталям</h3>
-              <p class="features-description">
-                Идейные соображения, а также начало повседневной работы по
-                формированию позиции.
-              </p>
-            </li>
-            <li class="features-item">
-              <h3 class="features-title">Пунктуальность</h3>
-              <p class="features-description">
-                Задача организации, в особенности же рамки и место обучения
-                кадров влечет за собой.
-              </p>
-            </li>
-            <li class="features-item">
-              <h3 class="features-title">Планирование</h3>
-              <p class="features-description">
-                Равным образом консультация с широким активом в значительной
-                степени обуславливает.
-              </p>
-            </li>
-            <li class="features-item">
-              <h3 class="features-title">Современные технологии</h3>
-              <p class="features-description">
-                Значимость этих проблем настолько очевидна, что реализация
-                плановых заданий.
-              </p>
-            </li>
-          </ul>
-        </div>
+        <ul class="container horizont">
+          <li class="features-item">
+            <h3 class="features-title">Внимание к деталям</h3>
+            <p class="features-description">
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
+          </li>
+          <li class="features-item">
+            <h3 class="features-title">Пунктуальность</h3>
+            <p class="features-description">
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
+            </p>
+          </li>
+          <li class="features-item">
+            <h3 class="features-title">Планирование</h3>
+            <p class="features-description">
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
+          </li>
+          <li class="features-item">
+            <h3 class="features-title">Современные технологии</h3>
+            <p class="features-description">
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
+          </li>
+        </ul>
       </section>
 
       <!-- Чем мы занимаемся -->
