--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             ><span class="web">Web</span>Studio</a
           >
           <ul class="header-list">
-            <li><a class="header-link" href="./index.html">Студия</a></li>
+            <li><a class="header-link-first" href="./index.html">Студия</a></li>
             <li>
               <a class="header-link" href="./portfolio.html">Портфолио</a>
             </li>
